tests/ui/indexing/index-help.rs
fn main() {
    let x = vec![1];
    x[0i32]; //~ ERROR E0277
}
